Fixes hero image moving outside container on safari browsers

--- a/themes/ropensci/static/css/sections.pcss
+++ b/themes/ropensci/static/css/sections.pcss
@@ -55,6 +55,7 @@ article ul li {
         z-index: -2;
         width: 100%;
         height: 90vh;
+        left: 0;
         content: "";
     }
     & h1 {
