--- a/themes/ropensci/static/css/style-new.css
+++ b/themes/ropensci/static/css/style-new.css
@@ -621,6 +621,7 @@ q:before, q:after {
   z-index: -2;
   width: 100%;
   height: 90vh;
+  left: 0;
   content: "";
 }.hero h1{
   color: white;
